# fukushia

./: .gitignore  AGENTS.md  README.md  app.py  backend_fastapi.py  main.py  pydantic_models.py  pyproject.toml
.clinerules/: application-rule.md  frontend-rule.md
.github/workflows/: auto-format.yml  ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.streamlit/: secrets.example.toml
agent/: firestore.py  gemini.py  utils.py
application/: .env.example  AGENTS.md  Dockerfile  README.md  config.py  main.py  pyproject.toml
application/agent/: gemini.py  natural_language_processor.py
application/agent/prompts/: conversational_agent.py  planner.py  task_execution_agent.py
application/agent/schemas/: support_plan.py
application/agent/tools/: __init__.py  google_search_tool.py  rag_search_social_support_tool.py  search_rag_social_support_tool.py  support_planner_tools.py
application/agents/: __init__.py  assessment_mapping_agent.py  conversational_agent.py  interactive_support_plan_agent.py  resource_extraction_agent.py  router_agent.py  suggestion_agent.py  task_execution_agent.py
application/data/: local_resources copy.json  local_resources.json  unset_keywords_local_resources.json
application/infra/: firestore.py
application/models/: pydantic_models.py
application/routes/: __init__.py  common.py
application/routes/assessment/items/: router.py
application/routes/assessment/map/: router.py
application/routes/assessments/: __init__.py  router.py
application/routes/clients/: router.py
application/routes/interactive_support_plan/: router.py
application/routes/interactive_support_plan/models/: interactive.py
application/routes/interview_records/: router.py
application/routes/notes/: router.py
application/routes/reports/activity/: router.py
application/routes/resources/: router.py  service.py  utils.py
application/routes/resources/advanced/: router.py
application/routes/resources/imports/: router.py
application/routes/resources/memos/: router.py
application/routes/tasks/: router.py
application/scripts/: seed.py
application/services/: utils.py
application/utils/auth/: __init__.py  google_credentials.py
frontend/: .env.example  .firebaserc  .gitignore  AGENTS.md  package-lock.json  package.json
frontend/src/: firebase.ts
frontend/src/app/: page.tsx  (+2 more)
(+26 files in other folders)
