[project]
name = "assessment_assistant"
version = "0.1.0"
description = "Memo & task management and assessment support app for social workers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "firebase-admin>=6.2.0",
  "google-generativeai>=0.3.0",
  "uvicorn[standard]>=0.35.0",
  "fastapi>=0.116.1",
  "langchain>=0.1.16",
  "langchain-google-genai>=0.1.3",
  "google-api-python-client>=2.86.0",
  "langchain-google-community>=0.0.4",
]

[build-system]
requires = ["hatchling>=1.12"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py"]
